--- a/src/app/bugs/bugs.component.scss
+++ b/src/app/bugs/bugs.component.scss
@@ -10,6 +10,7 @@
 
 .bugs {
   max-height: 700px;
+  margin-right: 1px;
 }
 
 .message {
@@ -48,4 +49,21 @@ button {
     background-color: $button !important;
     color: $textWhite !important;
   }
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+  height: 200px;
+}
+
+::-webkit-scrollbar-button {
+  background: #888888;
+}
+
+::-webkit-scrollbar-track-piece {
+  background: #cccccc;
+}
+
+::-webkit-scrollbar-thumb {
+  background: $button;
 }
