--- a/src/app/application/application.component.scss
+++ b/src/app/application/application.component.scss
@@ -22,7 +22,7 @@
   color: $textBlack;
   background-color: $backgroundSilver;
   @media (max-width: 767px) {
-    //padding: 0;
+    padding: 0;
     border-radius: unset;
     border: unset;
   }
@@ -31,8 +31,10 @@
 button {
   font-weight: 300;
   border-radius: 0;
-  background-color: $backgroundSilver !important;
-  color: $textBlack !important;
+  //background-color: $backgroundSilver !important;
+  //color: $textBlack !important;
+  background-color: #2c3c77 !important;
+  color: $textWhite !important;
   border: 1px solid $button;
   transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
   &:hover {
