--- a/src/app/bills/bills.component.scss
+++ b/src/app/bills/bills.component.scss
@@ -9,6 +9,7 @@
 
   @media (max-width: 767px) {
     padding: 0;
+    padding-top: 10px;
     border: none;
     border-radius: unset;
     box-shadow: none;
@@ -48,6 +49,7 @@ tr.mat-footer-row {
 }
 
 .data {
+  background-color: rgba(128, 128, 128, 0.5);
   &:hover {
     @media (min-width: 900px) {
       background-color: #C5C6C7;
@@ -156,6 +158,9 @@ tr.mat-footer-row {
   @media (max-width: 767px) {
     //width: 110% !important;
   }
+  th {
+    background-color: $backgroundBlue;
+  }
 }
 
 .desktopVersion {
@@ -167,8 +172,10 @@ tr.mat-footer-row {
 button {
   font-weight: 300;
   border-radius: 0;
-  background-color: $backgroundSilver !important;
-  color: $textBlack !important;
+  //background-color: $backgroundSilver !important;
+  background-color: #2c3c77 !important;
+  //color: $textBlack !important;
+  color: $textWhite !important;
   border: 1px solid $button;
   transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
   &:hover {
@@ -224,12 +231,12 @@ button {
 }
 
 /deep/ .mat-paginator-outer-container {
-  background-color: $backgroundSilver !important;
+  background-color: rgba(128, 128, 128, 0.5) !important;
   color: $textBlack !important;
 }
 
 .mat-elevation-z8 {
-  overflow-x: scroll;
+  overflow-x: hidden;
   border: 1px solid $borderBlue;
   box-shadow: 0px 10px 20px rgba(128,128,128,0.5);
   @media (max-width: 767px) {
@@ -244,7 +251,7 @@ button {
 }
 
 .mat-header-cell {
-  color: $textBlack !important;
+  color: $textWhite !important;
 }
 
 .mat-cell {
