--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -9,6 +9,15 @@
 
 .sidenav .mat-toolbar {
   //background: inherit;
+  background-color: #2c3c77 !important;
+  color: $textWhite !important;
+  border-bottom: 1px solid $borderSilver;
+  @media (min-width: 900px) {
+    border-right: 1px solid $borderSilver;
+  }
+  @media (max-width: 899px) {
+    background-color: $backgroundBlue !important;
+  }
 }
 
 .mat-toolbar.mat-primary {
@@ -16,12 +25,30 @@
   top: 0;
   z-index: 1;
   border-bottom: 1px solid $borderBlue;
+  background-color: #2c3c77 !important;
+  @media (max-width: 899px) {
+    background-color: $backgroundBlue !important;
+  }
 }
 
 .logout {
   position: absolute;
   bottom: 10px;
   width: 90%;
+  button {
+    @media (min-width: 900px) {
+      background-color: #2c3c77 !important;
+      border: 1px solid $borderSilver;
+      color: $textWhite !important;
+      &:hover {
+      @media (min-width: 900px) {
+          background-color: $button !important;
+          color: $textWhite !important;
+          transition: background-color 500ms ease, color 500ms ease;
+        }
+      }
+    }
+  }
 }
 
 .mat-toolbar-single-row {
@@ -53,6 +80,7 @@
 
 .copyright {
   font-size: 12px;
+  color: $textWhite;
   /deep/ .material-icons {
     font-size: 10px !important;
   }
@@ -69,16 +97,23 @@
 }
 
 /deep/ .mat-sidenav {
-  background-color: $backgroundSilver !important;
+  //background-color: $backgroundSilver !important;
   color: $textBlack !important;
   border-right: 1px solid $borderBlue;
+  background-color: #2c3c77 !important;
+  @media (max-width: 899px) {
+    background-color: $backgroundBlue !important;
+  }
 }
 
 /deep/ app-menu-list-item {
   a {
-    background-color: $backgroundSilver !important;
-    color: $textBlack !important;
-    border-bottom: 1px solid $borderBlue;
+    //background-color: $backgroundSilver !important;
+    //color: $textBlack !important;
+    color: $textWhite !important;
+    background-color: #2c3c77;
+    border-bottom: 1px solid $borderSilver;
+    //border-bottom: 1px solid $borderBlue;
     transition: background-color 500ms ease, color 500ms ease, border-bottom 500ms ease;
     &:hover {
       @media (min-width: 900px) {
@@ -116,6 +151,7 @@ button {
   @media (max-width: 899px) {
     background-color: $button !important;
     color: $textWhite !important;
+    border: 1px solid $borderSilver;
   }
 }
 
