--- a/src/app/profile/profile.component.scss
+++ b/src/app/profile/profile.component.scss
@@ -11,6 +11,7 @@
     //padding: 0;
     border-radius: unset;
     border: unset;
+    padding: 10px;
   }
 }
 
@@ -82,8 +83,10 @@
 button {
   font-weight: 300;
   border-radius: 0;
-  background-color: $backgroundSilver !important;
-  color: $textBlack !important;
+  //background-color: $backgroundSilver !important;
+  //color: $textBlack !important;
+  background-color: #2c3c77 !important;
+  color: $textWhite !important;
   border: 1px solid $button;
   transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
   &:hover {
