--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -120,8 +120,10 @@ currencyCard {
 button {
   font-weight: 300;
   border-radius: 0;
-  background-color: $backgroundSilver !important;
-  color: $textBlack !important;
+  //background-color: $backgroundSilver !important;
+  //color: $textBlack !important;
+  background-color: #2c3c77 !important;
+  color: $textWhite !important;
   border: 1px solid $button;
   transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
   &:hover {
@@ -209,11 +211,19 @@ button {
 }
 
 .inactiveButton {
-  background-color:  $backgroundSilver !important;
-  color: $textBlack !important;
+  //background-color:  $backgroundSilver !important;
+  //color: $textBlack !important;
+  background-color: #2c3c77 !important;
+  color: $textWhite !important;
   &:hover {
-    background-color: unset !important;
-    color: unset !important;
+    background-color: #2c3c77 !important;
+    color: $textWhite !important;
+  }
+  @media (max-width: 899px) {
+    background-color: $backgroundBlue !important;
+  &:hover {
+    background-color: $backgroundBlue !important;
+  }
   }
 }
 
