--- a/src/app/bugs/bugs.component.scss
+++ b/src/app/bugs/bugs.component.scss
@@ -34,8 +34,10 @@
 button {
   font-weight: 300;
   border-radius: 0;
-  background-color: $backgroundSilver !important;
-  color: $textBlack !important;
+  //background-color: $backgroundSilver !important;
+  //color: $textBlack !important;
+  background-color: #2c3c77 !important;
+  color: $textWhite !important;
   border: 1px solid $button;
   transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
   &:hover {
