--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -117,5 +117,5 @@
   </form>
 </div>
 <div class="report-problem text-center w-100">
-  <p class="mt-1 w-100 text-center">If you have any problem, send mail on <a href="mailto:someone@example.com">privateewallet@gmail.com</a></p>
+  <p class="mt-1 w-100 text-center">If you have any problem, send mail on <a href="mailto:privateewallet@gmail.com">privateewallet@gmail.com</a></p>
 </div>
