--- a/src/palette.scss
+++ b/src/palette.scss
@@ -13,6 +13,7 @@ $primary: #547AA5;
 $button: #151E3F;
 $textBlack: #000000;
 $textWhite: #ffffff;
+$textBlue: #151E3F;
 //$backgroundSilver: #D3D3D3;
 $backgroundSilver: #ececec;
 $selectArrow: #151E3F;
