--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,9 +7,9 @@
   <!--<p style="font-size: 20px; color: white">Loading...</p>-->
 </ngx-spinner>
 <div class="row">
-  <div class="col-md-1 col-sm-12 p-1">
+  <div class="col-md-1 col-sm-12 p-1 languageChoice">
     <mat-form-field class="w-90">
-      <mat-label>{{ _translation('Language', langCode) }}</mat-label>
+      <!--<mat-label>{{ _translation('Language', langCode) }}</mat-label>-->
       <mat-select (selectionChange)="changeLang($event, null)" [(ngModel)]="langCode">
         <mat-option *ngFor="let language of languages" [value]="language.langCode">
           <p>{{ language.language }}</p>
@@ -74,6 +74,9 @@
   </div>
 </div>
 
+<div class="logo">
+  <img class="logoImage" src="assets/img/logo.png">
+</div>
 
 <div class="login p-3">
   <!--<form *ngIf="!userActive" (submit)="activateUser(code)">-->
@@ -94,7 +97,7 @@
 
   <form (submit)="login(email, password)" *ngIf="userActive">
     <!--img src="https://image.freepik.com/vettori-gratuito/consulenza-finanziaria-orientamento-finanziario-consulente-aziendale-assistenza-agli-investimenti-disegno-di-linea-di-disegno-di-linea-di-disegno-di-linea-di-libro-disegno-per-la-grafica-mobile-e-web_1200-303.jpg" width="100%" height="400" alt="Italian Trulli"-->
-    <h3 class="mb-3">{{ _translation('Login', langCode) }}</h3>
+    <!--<h3 class="mb-3">{{ _translation('Login', langCode) }}</h3>-->
     <mat-form-field>
       <mat-label>{{ _translation('Username', langCode) }}</mat-label>
       <input type="email" matInput required name="email" [(ngModel)]="email">
@@ -111,11 +114,11 @@
     </div>
     <div class="text-center">
       <button type="submit" [disabled]="email && password ? false: true" mat-raised-button color="primary" class="btn-block">{{ _translation('Sign in', langCode) }}</button>
-      <p class="m-2">{{ _translation('Don\'t have an account?', langCode) }} <a routerLink="/register">{{ _translation('Sign up', langCode) }}</a></p>
+      <p class="m-2 newAccount">{{ _translation('Don\'t have an account?', langCode) }} <a routerLink="/register">{{ _translation('Sign up', langCode) }}</a></p>
       <!--<p class="m-2"><a routerLink="/restartPassword">{{ _translation('Forgot your password', langCode) }}</a></p>-->
     </div>
   </form>
 </div>
 <div class="report-problem text-center w-100">
-  <p class="mt-1 w-100 text-center">If you have any problem, send mail on <a href="mailto:privateewallet@gmail.com">privateewallet@gmail.com</a></p>
+  <p class="mt-1 w-100 text-center contactSupport">If you have any problem, send mail on <a class="mailTo" href="mailto:privateewallet@gmail.com">privateewallet@gmail.com</a></p>
 </div>
