--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -56,11 +56,16 @@ mat-form-field {
 }
 
 .languageChoice {
-  position: absolute;
-  bottom: 0px;
-  width: 90%;
-  margin-left: 5%;
-  margin-right: 5%;
+  //position: absolute;
+  //bottom: 0px;
+  //top: 0px;
+  width: 100%;
+  //margin-left: 5%;
+  //margin-right: 5%;
+  @media (max-width: 767px) {
+    padding-left: 5%;
+    padding-right: 5%;
+  }
 }
 
 button {
@@ -81,6 +86,11 @@ button {
     background-color: $button !important;
     color: $textWhite !important;
   }
+}
+
+/deep/ .mat-form-field {
+  font-weight: 300 !important;
+  font-size: 13px;
 }
 
 /deep/ .mat-form-field.mat-focused .mat-form-field-label {
@@ -121,3 +131,34 @@ button {
 /deep/ .mat-select-arrow {
   color: $selectArrow !important;
 }
+
+.newAccount, .contactSupport {
+  font-size: 14px;
+  font-weight: 300;
+}
+
+.mailTo {
+  color: $textBlue;
+  font-weight: 400;
+}
+
+.logo {
+  width: 100%;
+  height: 100px;
+  @media (max-width: 767px) {
+    margin-left: 5%;
+    margin-right: 5%;
+    width: 90%;
+  }
+  @media (min-width: 900px) {
+    text-align: center;
+  }
+}
+
+.logoImage {
+  @media (max-width: 767px) {
+    width: 100%;
+    height: 100px;
+  }
+}
+
