login_form_changes

--- a/src/palette.scss
+++ b/src/palette.scss
@@ -20,6 +20,9 @@ $selectArrow: #151E3F;
 $borderBlue: #151E3F;
 $borderSilver: #ececec;
 $backgroundBlue: #151E3F;
+$buttonBorder: #FF834F;
+$buttonText: #FF834F;
+$buttonBackground: #FF834F;
 
 
 $exColor1: #1F2833;
