--- a/src/palette.scss
+++ b/src/palette.scss
@@ -23,6 +23,9 @@ $backgroundBlue: #151E3F;
 $buttonBorder: #FF834F;
 $buttonText: #FF834F;
 $buttonBackground: #FF834F;
+$backgroundOrange: #FF834F;
+$hoverOrange: #e45c22;
+$borderOrange: #FF834F;
 
 
 $exColor1: #1F2833;
