--- a/src/app/settings/settings.component.scss
+++ b/src/app/settings/settings.component.scss
@@ -126,23 +126,31 @@ currencyCard {
 
 button {
   font-weight: 300;
-  border-radius: 0;
-  //background-color: $backgroundSilver !important;
+  //border-radius: 0;
+  background-color: $backgroundSilver !important;
   //color: $textBlack !important;
-  background-color: #2c3c77 !important;
-  color: $textWhite !important;
-  border: 1px solid $button;
+  //border: 1px solid $button;
+  border: 1px solid $buttonBorder;
+  color: $button !important;
+  border-radius: 50px;
+  box-shadow: 0px 10px 20px rgba(128,128,128,0.5) !important;
   transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
   &:hover {
     @media (min-width: 900px) {
-      background-color: $button !important;
-      color: $textWhite !important;
-      transition: background-color 500ms ease, color 500ms ease;
+      //background-color: $button !important;
+      //color: $textWhite !important;
+      background-color: $buttonBackground !important;
+      color: $button !important;
+      border: 1px solid $button;
+      transition: background-color 500ms ease, color 500ms ease, border 500ms ease;
     }
   }
   @media (max-width: 899px) {
-    background-color: $button !important;
-    color: $textWhite !important;
+    //background-color: $button !important;
+    //color: $textWhite !important;
+    background-color: $buttonBackground !important;
+    color: $button !important;
+    border: 1px solid $button;
   }
 }
 
@@ -217,22 +225,22 @@ button {
   }
 }
 
-.inactiveButton {
-  //background-color:  $backgroundSilver !important;
-  //color: $textBlack !important;
-  background-color: #2c3c77 !important;
-  color: $textWhite !important;
-  &:hover {
-    background-color: #2c3c77 !important;
-    color: $textWhite !important;
-  }
-  @media (max-width: 899px) {
-    background-color: $backgroundBlue !important;
-  &:hover {
-    background-color: $backgroundBlue !important;
-  }
-  }
-}
+//.inactiveButton {
+//  //background-color:  $backgroundSilver !important;
+//  //color: $textBlack !important;
+//  background-color: #2c3c77 !important;
+//  color: $textWhite !important;
+//  &:hover {
+//    background-color: #2c3c77 !important;
+//    color: $textWhite !important;
+//  }
+//  @media (max-width: 899px) {
+//    background-color: $backgroundBlue !important;
+//  &:hover {
+//    background-color: $backgroundBlue !important;
+//  }
+//  }
+//}
 
 .activeActionButton {
   @media (max-width: 767px) {
