--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -120,5 +120,5 @@
   </form>
 </div>
 <div class="report-problem text-center w-100">
-  <p class="mt-1 w-100 text-center contactSupport">If you have any problem, send mail on <a class="mailTo" href="mailto:privateewallet@gmail.com">privateewallet@gmail.com</a></p>
+  <p class="mt-1 w-100 text-center contactSupport">{{ _translation('If you have any problem, send mail on', langCode) }} <a class="mailTo" href="mailto:privateewallet@gmail.com">privateewallet@gmail.com</a></p>
 </div>
