--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -22,12 +22,12 @@ mat-form-field {
     //top: 0;
     //margin-top: 50%;
     padding: 0;
-    position: relative;
+    //position: relative;
   }
 }
 
 .report-problem {
-  //bottom: 0;
+  bottom: 0;
   position: absolute;
   @media (min-width: 900px) {
     bottom: 0;
