--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,6 +13,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import '~ngx-bar-rating/themes/br-stars-theme';
 @import '~ngx-bar-rating/themes/br-movie-theme';
 @import '~ngx-bar-rating/themes/br-square-theme';
+@import "~animate.css/animate.css";
 
 a {
   text-decoration: none;
